opam-version: "2.0"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
homepage: "https://github.com/vbmithr/logs-async"
bug-reports: "https://github.com/vbmithr/logs-async/issues"
dev-repo: "git+https://github.com/vbmithr/logs-async"
doc: "https://vbmithr.github.io/logs-async/doc"
build: [ "dune" "build" "-j" jobs "-p" name ]
depends: [
  "dune" {>= "1.11.4"}
  "logs" {>= "0.7.0"}
  "async_kernel" {>= "v0.12.0"}
]
synopsis: "Jane Street Async logging with Logs"
description: """
This is analogous to the Logs_lwt module in the logs package.
The log functions of this module return Async threads that proceed only
when the log operation is over, as defined by the current
Logs.reporter."""
