(library
 (name logs_async)
 (public_name logs-async)
 (modules Logs_async)
 (libraries logs async_kernel))

(library
 (name logs_async_reporter)
 (public_name logs-async-reporter)
 (modules Logs_async_reporter)
 (libraries logs.fmt core async))

(library
 (name logs_async_ovh)
 (public_name logs-async-ovh)
 (modules Logs_async_ovh)
 (libraries
   logs
   logs-async-reporter
   syslog-rfc5424
   uri
   core
   async))
